--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["nicolai <nicolaibthomsen@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 deepchecks = "^0.12.0"
+python-decouple = "^3.7"
 
 [tool.poetry.dev-dependencies]
 
