--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ authors = ["nicolai <nicolaibthomsen@gmail.com>"]
 python = "^3.9"
 deepchecks = "^0.12.0"
 python-decouple = "^3.7"
+ipykernel = "^6.21.2"
+azure-storage-blob = "^12.14.1"
+azure-identity = "^1.12.0"
+embetter = "^0.3.2"
+scikit-learn = "1.2.0"
+lightgbm = "^3.3.5"
 
 [tool.poetry.dev-dependencies]
 
